BUG#14194: Problem with fulltext boolean search and apostrophe Fixed that single apostrophe was considered as a word character.